--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -36,7 +36,7 @@ $\Lambda_p$ is the attenuation length in \unit{\meter}, \textit{i.e.} the length
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.66\textwidth]{Figures/introduction/cross_sections.pdf}
+    \includegraphics[width=0.66\textwidth]{Figures/Introduction/cross_sections.pdf}
     \caption{
         Cross-sections for platinum (Z=78) corresponding to different processes occurring when photons interact with matter.
         Data taken from the NIST (National Institute of Standards and Technology) \parencite{NIST_cross_sections} website.
@@ -91,7 +91,7 @@ At synchrotrons, where the incident beam has a horizontal polarisation, working 
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{Figures/introduction/torus.pdf}
+    \includegraphics[width=\textwidth]{Figures/Introduction/torus.pdf}
     \caption{
         Effect of relation between synchrotron x-ray polarisation $\hat{\epsilon}$ and scattered x-ray polarisation $\hat{\epsilon}'$ on the scattered field.
         The scattered field intensity is attenuated by a $\cos{(\theta)}$ factor, where $\theta$ is the angle between the plane perpendicular to the electric field and the direction of observation $\vec{R}$.
@@ -125,7 +125,7 @@ To describe the phase of the scattered field, which depends on the phase of each
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[scale=0.5]{Figures/introduction/q.pdf}
+    \includegraphics[scale=0.5]{Figures/Introduction/q.pdf}
     \caption{
     Geometry of the scattering vector $\vec{q}$ in reciprocal space, $2\theta$ is the scattering angle.
     The magnitude of the scattering vector can be derived from the scattering angle $\theta$ that draws a line cutting $\vec{q}$ at $|\vec{q}|/2$.
@@ -168,7 +168,7 @@ This difference in scattering intensity between elements becomes crucial when wo
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.75\textwidth]{Figures/introduction/atomic_form_factor.pdf}
+    \includegraphics[width=0.75\textwidth]{Figures/Introduction/atomic_form_factor.pdf}
     \caption{
     Atomic form factor calculated for platinum (Z=78) using tabulated values \parencite{InterTablesOfCryst} for equation \ref{eq:AtomicFormFactor}.
     See \url{http://lampx.tugraz.at/~hadley/ss1/crystaldiffraction/atomicformfactors/formfactors.php}.
@@ -265,8 +265,8 @@ The Thomson scattering length is left apart for simplicity.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[height=5cm]{/home/david/Documents/PhDScripts/Drawing/blender/FCC.png}
-    \includegraphics[height=5cm]{/home/david/Documents/PhD/Figures/introduction/PtClean.pdf}
+    \includegraphics[height=5cm]{/home/david/Documents/PhD/Figures/Drawing/blender/FCC.png}
+    \includegraphics[height=5cm]{/home/david/Documents/PhD/Figures/Introduction/PtClean.pdf}
     \caption{
     Face centred cubic (FCC) lattice of Pt (space group 225).
     Atoms are represented as solid spheres and situated on the corners and at the middle of the faces of the cube.
@@ -328,7 +328,7 @@ The direction perpendicular to the $(hkl)$ plane is written as $[hkl]$, the dist
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[scale=0.5]{Figures/introduction/BraggLaw.pdf}
+    \includegraphics[scale=0.5]{Figures/Introduction/BraggLaw.pdf}
     \caption{
     The difference in the path length (in red) between plane waves scattered at an angle $\theta$ is equal to $2d_{hkl} \sin{\theta}$.
     This distance must be an integer multiple of the wavelength for constructive interference to occur.
@@ -485,8 +485,8 @@ The emittance $\epsilon$ is defined as the product of the source size $D$ and th
 
 \begin{figure}[!htb]
     \centering
-    % \includegraphics[scale=0.8]{Figures/introduction/coherence_lengths.pdf}
-    \includegraphics[width=\textwidth]{Figures/introduction/CoherenceLengths.pdf}
+    % \includegraphics[scale=0.8]{Figures/Introduction/coherence_lengths.pdf}
+    \includegraphics[width=\textwidth]{Figures/Introduction/CoherenceLengths.pdf}
     \caption{
     (a) Two waves become out of phase in the direction of the beam at a distance $L_L$ from being in phase after $N/2$ wavelengths for $\lambda$ and $(N+1)/2$ wavelengths for $\lambda - \Delta\lambda$. Since $N >> 1$, $N\approx\lambda/\Delta\lambda$, which yields eq. \ref{eq:LongitudinalCoL}.
     (b) A plane wave emitted from one extremity of the source is out of phase with another plane wave emitted from the other extremity with maximum angular divergence $\Delta\theta$, at a distance $L_T$ in the plane perpendicular to the direction of the beam, situated at a distance $R$ from the source.
