--- a/Sections/99_2eme_couverture.tex
+++ b/Sections/99_2eme_couverture.tex
@@ -14,7 +14,7 @@
 %*****************************************************
 %***** LOGO DE L'ED À CHANGER IMPÉRATIVEMENT *********
 %*****************************************************
-\includegraphics[height=2.4cm]{logo/logo_usp_PIF.png}
+\includegraphics[height=2.4cm]{/home/david/Documents/PhD/Figures/Logos/logo_usp_PIF.png}
 \vspace{0.5cm}
 %*****************************************************
 %\fontfamily{cmss}\fontseries{m}\selectfont
@@ -61,7 +61,7 @@ Finalement, l'évolution de la structure d'ensemble et de monocristaux est compa
 %*****************************************************
 %***** LOGO DE L'ED À CHANGER IMPÉRATIVEMENT *********
 %*****************************************************
-\includegraphics[height=2.4cm]{logo/logo_usp_PIF.png}
+\includegraphics[height=2.4cm]{/home/david/Documents/PhD/Figures/Logos/logo_usp_PIF.png}
 \vspace{0.5cm}
 %*****************************************************
 %\fontfamily{cmss}\fontseries{m}\selectfont
