--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -2,7 +2,7 @@
 
 \newgeometry{left=6cm,bottom=1cm, top=1cm, right=1cm}
 
-\tikz[remember picture,overlay] \node[opacity=1,inner sep=0pt] at (-13mm,-135mm){\includegraphics{logo/Frame-ups.pdf}};
+\tikz[remember picture,overlay] \node[opacity=1,inner sep=0pt] at (-13mm,-135mm){\includegraphics{/home/david/Documents/PhD/Figures/Logos/Frame-ups.pdf}};
 
 % fonte sans empattement pour la page de titre
 \fontfamily{fvs}\fontseries{m}\selectfont
@@ -20,8 +20,8 @@
 \end{picture}
 
 % \vspace{-12mm}
-% \flushright \includegraphics[height=2.1cm]{logo/cea.jpg} \hspace{7mm}
-% \includegraphics[height=2.1cm]{logo/SOLEIL.png}
+% \flushright \includegraphics[height=2.1cm]{/home/david/Documents/PhD/Figures/Logos/cea.jpg} \hspace{7mm}
+% \includegraphics[height=2.1cm]{/home/david/Documents/PhD/Figures/Logos/SOLEIL.png}
 
 %*****************************************************
 %******************** TITRE **************************
