--- a/Sections/2_Theory_Models/SXRD.tex
+++ b/Sections/2_Theory_Models/SXRD.tex
@@ -16,7 +16,7 @@ The aim of the technique is to obtain geometrical information of the surface at 
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{Figures/introduction/SurfaceReconstructions.pdf}
+    \includegraphics[width=\textwidth]{Figures/Introduction/SurfaceReconstructions.pdf}
     \caption{
     (a) Top view of the crystal surface, the last atomic layer (green) does not have the same periodicity as the bulk layers (brown), but a ($2\times4$) periodicity.
     (b) HK plane in the reciprocal space, diffraction peaks are represented as small brown and green dots for the bulk and surface reconstruction, respectively. The bulk reciprocal lattice is represented in grey.
@@ -47,7 +47,7 @@ In this case $M_{ii}, M_{jj} = 2, 4$, and $M_{ij}, M_{ji} = 0, 0$.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.9\textwidth]{Figures/introduction/CTRConvolution.png}
+    \includegraphics[width=0.9\textwidth]{Figures/Introduction/CTRConvolution.png}
     \caption{
     Describing a crystal surface by the multiplication of the crystal lattice by a step-function in real space explains the shape of crystal truncation rods in reciprocal space by the convolution theorem.
     Figure taken from \cite{Willmott}.
@@ -83,7 +83,7 @@ This expression is only valid within the kinematical approach to diffraction.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{Figures/introduction/relax_rough_ctr.pdf}
+    \includegraphics[width=\textwidth]{Figures/Introduction/relax_rough_ctr.pdf}
     \caption{
     Simulated intensity of a [2, 0, L] crystal truncation rod perpendicular for a (100)-oriented Pt single crystal, computed with ROD \parencite{Vlieg2000}.
     (a) The intensity between the Bragg peaks decreases with increasing roughness.
@@ -122,8 +122,8 @@ It is a geometric construction that represents the reciprocal space constructed 
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[trim=75 150 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereInPlane3D.png}
-    \includegraphics[trim=75 150 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereOutOfPlane3D.png}
+    \includegraphics[trim=75 150 75 100, clip, width=0.49\textwidth]{Figures/Introduction/EwaldSphereInPlane3D.png}
+    \includegraphics[trim=75 150 75 100, clip, width=0.49\textwidth]{Figures/Introduction/EwaldSphereOutOfPlane3D.png}
     \caption{
     Ewald sphere represented together with the reciprocal lattice before (green) and after (blue) rotating the sample to satisfy the Laue condition.
     The node of the reciprocal lattice that satisfies the Laue condition is in red.
@@ -141,7 +141,7 @@ The Laue condition for a particular reflection is satisfied when the scattering 
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.9\textwidth]{Figures/sixs/diffractometer.png}
+    \includegraphics[width=0.9\textwidth]{Figures/SixS/Diffractometer.pdf}
     \caption{
     2+3 multi-environment diffractometer (MED) used at SixS, figure adapted from \cite{Schleputz2011}.
     The diffractometer has a horizontal (red) and vertical (blue) geometry, depending on the position of the sample.\\
@@ -193,7 +193,7 @@ This kind of measurement is called \textit{specular} measurement, for which the 
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[trim=75 150 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereSpecular3D.png}
+    \includegraphics[trim=75 150 75 100, clip, width=0.49\textwidth]{Figures/Introduction/EwaldSphereSpecular3D.png}
     \caption{
     Ewald sphere represented together with the reciprocal lattice before (green) and after (blue) rotating the sample to satisfy the Laue condition.
     Measurements in the specular direction is performed by simultaneously rotating the out-of-plane sample angle $\beta$ while the out-of-plane detector angle $\delta$ follows the relation $\delta=2\beta$.
