--- a/references.bib
+++ b/references.bib
@@ -5772,7 +5772,7 @@ author={Erisman, Jan Willem and Sutton, Mark A. and Galloway, James and Klimont,
 title={How a century of ammonia synthesis changed the world},
 journal={Nature Geoscience},
 year={2008},
-month={Oct},
+month={10},
 day={01},
 volume={1},
 number={10},
