--- a/Sections/6_Appendix/3D_Operando.tex
+++ b/Sections/6_Appendix/3D_Operando.tex
@@ -1,3 +1,4 @@
 \clearpage
-\includepdf[pages=-]{/home/david/Documents/PhD/PhDScripts/SixS_2021_06_BCDI_NH3/figures/Poster3D/3D_B7.pdf}\label{app:AppendixB7}
-\includepdf[pages=-]{/home/david/Documents/PhD/PhDScripts/SixS_2021_06_BCDI_NH3/figures/Poster3D/3D_D6_edited.pdf}\label{app:AppendixD6}
+% \includepdf[pages=-]{/home/david/Documents/PhD/PhDScripts/SixS_2021_06_BCDI_NH3/figures/Poster3D/3D_B7.pdf}\label{app:AppendixB7}
+% \includepdf[pages=-]{/home/david/Documents/PhD/PhDScripts/SixS_2021_06_BCDI_NH3/figures/Poster3D/OperandoD6.pdf}\label{app:AppendixD6}
+\includepdf[pages=-]{/home/david/Documents/PhD/PhDScripts/SixS_2021_06_BCDI_NH3/figures/Poster3D/OperandoBCDI.pdf}\label{app:AppendixOperando}
